src/examples/errors/no_main.del



def entry() -> int {


    // This should have been named main 

    
    return 0;
}